--- a/_blog.yml
+++ b/_blog.yml
@@ -2111,3 +2111,13 @@
   tags:
     - nlp
     - research
+
+- local: rwkv
+  title: "Introducing RWKV — An RNN with the advantages of a transformer"
+  author: BlinkDL
+  thumbnail: /blog/assets/142_rwkv/rwkv_thumbnail.png
+  date: May 15, 2023
+  tags:
+    - nlp
+    - community
+    - research 
