Add chatbot-amd-gpu blog (#1065)
* Create a thumbnail

* add chatbot-amd-gpu.md

* Update chatbot-amd-gpu.md

* Add image files for chatbox-amd-gpu blog

* Update chatbot-amd-gpu.md

Add images

* Add thumbnail.png

* Update chatbot-amd-gpu.md

update thumbnail.png

* Update _blog.yml

add chatbot-amd-gpu blogpost

* Update chatbot-amd-gpu.md

Add co-author

* Update chatbot-amd-gpu.md

Improve readability

* Update chatbot-amd-gpu.md

improve readability

* Add files via upload

update thumbnail

* Update _blog.yml

Update the title and tags of chatbot-amd-gpu

--- a/_blog.yml
+++ b/_blog.yml
@@ -2121,3 +2121,15 @@
     - nlp
     - community
     - research 
+
+- local: chatbot-amd-gpu
+  title: "Run a Chatgpt-like Chatbot on a Single GPU with ROCm"
+  thumbnail: /blog/assets/chatbot-amd-gpu/thumbnail.png
+  author: andyll7772
+  date: May 15, 2023
+  tags:
+    - guide
+    - llm
+    - nlp
+    - inference
+    - rocm
