--- a/_blog.yml
+++ b/_blog.yml
@@ -2115,6 +2115,7 @@
 - local: content-guidelines-update
   title: "Announcing our new Content Guidelines and Policy"
   author: giadap
+  thumbnail: /blog/assets/content-guidelines-blogpost/thumbnail.png
   date: May 15, 2023
   tags:
     - content-policy
