--- a/_events.yml
+++ b/_events.yml
@@ -3,6 +3,11 @@
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
+- name: "Free Panel – The Linux Moment of AI: Open Sourced AI Stack"
+  link: https://future.snorkel.ai/agenda/
+  date: June 7, 2023
+  description: "In this virtual panel, experts, including Hugging Face Chief Evangelist, will delve into how open-source models and tools can revolutionize AI."
+  
 - name: "Free Workshop: Save money with Inferentia2"
   link: https://aws-startup-lofts.com/amer/loft/san-francisco/e/c1621/ml-startup-workshop-deploying-text-summarization-and-image-generation-applications-with-hugging-face-and-aws-inferentia2
   date: May 11, 2023
