Update Hugging Cast v2 URL

--- a/_events.yml
+++ b/_events.yml
@@ -4,7 +4,7 @@
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
 - name: "Hugging Cast v2 - Live AI News and Demos"
-  link: https://streamyard.com/watch/zWBsznmYH5fP
+  link: https://streamyard.com/watch/GJkVxAWR76k2
   date: May 26, 2023
   description: "Join our live show - we'll discuss StarCoder, Transformer Agents and our latest benchmarks!"
 
