add instruction tuning sd blog post.

--- a/_blog.yml
+++ b/_blog.yml
@@ -2155,3 +2155,16 @@
   tags:
     - bigcode
     - deduplication
+
+- local: instruction-tuning-md
+  title: "Instruction-tuning Stable Diffusion with InstructPix2Pix"
+  author: sayakpaul
+  guest: true
+  thumbnail: /blog/assets/instruction_tuning_sd/thumbnail.png
+  date: May 23, 2023
+  tags:
+    - diffusers
+    - diffusion
+    - instruction-tuning
+    - research
+    - guide
