--- a/_blog.yml
+++ b/_blog.yml
@@ -2155,3 +2155,13 @@
   tags:
     - bigcode
     - deduplication
+
+- local: hf-hub-glam-guide
+  title: "The Hugging Face Hub for Galleries, Libraries, Archives and Museums"
+  author: davanstrien
+  guest: false
+  thumbnail: /blog/assets/144_hf_hub_glam_guide/thumbnail.png
+  date: May 24, 2023
+  tags:
+    - community
+    - guide
