Adds a post on instruction-tuning Stable Diffusion (#1125)
* add instruction tuning sd blog post.

* replace figure urls.

* i am not a guest author :)

* fix: local name.

* fix: gradio module integration

* fix: gradio space.

* change to hf paper links.

* optimize the image.

--- a/_blog.yml
+++ b/_blog.yml
@@ -2155,3 +2155,15 @@
   tags:
     - bigcode
     - deduplication
+
+- local: instruction-tuning-sd
+  title: "Instruction-tuning Stable Diffusion with InstructPix2Pix"
+  author: sayakpaul
+  thumbnail: /blog/assets/instruction_tuning_sd/thumbnail.png
+  date: May 23, 2023
+  tags:
+    - diffusers
+    - diffusion
+    - instruction-tuning
+    - research
+    - guide
