--- a/_blog.yml
+++ b/_blog.yml
@@ -2168,10 +2168,10 @@
     - research
     - guide
 
-- local: safetensors-official
-  title: 🐶Safetensors is really safe and becoming the default
+- local: safetensors-security-audit
+  title: "Safetensors audited as really safe and becoming the default"
   author: Narsil
-  thumbnail: /blog/assets/09_accelerated_inference/thumbnail.png
+  thumbnail: /blog/assets/142_safetensors_official/thumbnail.png
   date: May 23, 2023
   tags:
     - pickle
