New post: Hugging Face and IBM (#1130)
* Initial version

* Minor fixes

* Update huggingface-and-ibm.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update huggingface-and-ibm.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Resize image

* Update blog index

---------

Co-authored-by: Julien Simon <julsimon@huggingface.co>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2177,3 +2177,12 @@
     - launch
     - cloud
     - azure
+- local: huggingface-and-ibm
+  title: "Hugging Face and IBM partner on watsonx.ai, the next-generation enterprise studio for AI builders"
+  author: juliensimon
+  thumbnail: /blog/assets/144_ibm/01.png
+  date: May 23, 2023
+  tags:
+    - cloud
+    - ibm
+    - partnership
