--- a/_blog.yml
+++ b/_blog.yml
@@ -844,16 +844,6 @@
     - nlp
     - community
 
-- local: hugging-face-endpoints-on-azure
-  title: "Hugging Face Collaborates with Microsoft to Launch Hugging Face Endpoints on Azure"
-  author: juliensimon
-  thumbnail: /blog/assets/75_hugging_face_endpoints_on_azure/01.png
-  date: May 24, 2022
-  tags:
-    - launch
-    - cloud
-    - azure
-
 - local: community-update
   title: "Introducing Pull Requests and Discussions 🥳"
   author: victor
@@ -2178,3 +2168,12 @@
     - serialization
     - load times
 
+- local: hugging-face-endpoints-on-azure
+  title: "Hugging Face Collaborates with Microsoft to Launch Hugging Face Model Catalog on Azure"
+  author: philschmid
+  thumbnail: /blog/assets/75_hugging_face_endpoints_on_azure/01.png
+  date: May 23, 2023
+  tags:
+    - launch
+    - cloud
+    - azure
