--- a/_blog.yml
+++ b/_blog.yml
@@ -2186,3 +2186,13 @@
     - cloud
     - ibm
     - partnership
+    
+- local: hugging-face-endpoints-on-azure
+  title: "Hugging Face Collaborates with Microsoft to Launch Hugging Face Model Catalog on Azure"
+  author: philschmid
+  thumbnail: /blog/assets/75_hugging_face_endpoints_on_azure/01.png
+  date: May 23, 2023
+  tags:
+    - launch
+    - cloud
+    - azure
