--- a/_blog.yml
+++ b/_blog.yml
@@ -2172,7 +2172,7 @@
 - local: huggingface-and-ibm
   title: "Hugging Face and IBM partner on watsonx.ai, the next-generation enterprise studio for AI builders"
   author: juliensimon
-  thumbnail: /blog/assets/144_ibm/01.jpg
+  thumbnail: /blog/assets/144_ibm/01.png
   date: May 23, 2023
   tags:
     - cloud
@@ -2182,7 +2182,7 @@
 - local: hugging-face-endpoints-on-azure
   title: "Hugging Face Collaborates with Microsoft to Launch Hugging Face Model Catalog on Azure"
   author: philschmid
-  thumbnail: /blog/assets/75_hugging_face_endpoints_on_azure/01.png
+  thumbnail: /blog/assets/75_hugging_face_endpoints_on_azure/01.jpg
   date: May 23, 2023
   tags:
     - cloud
