--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -495,6 +495,16 @@
     - text-to-image
     - text-to-video
 
+- local: starchat-alpha
+  title: "使用 StarCoder 创建一个编程助手"
+  author: lewtun
+  thumbnail: /blog/assets/starchat_alpha/thumbnail.png
+  date: May 9, 2023
+  tags:
+    - nlp
+    - community
+    - research
+
 - local: generative-ai-models-on-intel-cpu
   title: "越小越好：Q8-Chat，在英特尔至强 CPU 上体验高效的生成式 AI"
   thumbnail: /blog/assets/143_q8chat/thumbnail.png
