--- a/_blog.yml
+++ b/_blog.yml
@@ -2187,3 +2187,13 @@
     - cloud
     - ibm
     - partnership
+
+- local: bitsandbytes-4bit-integration
+  title: "Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA"
+  author: ybelkada
+  thumbnail: /blog/assets/96_hf_bitsandbytes_integration/Thumbnail_blue.png
+  date: May 24, 2023
+  tags:
+    - cloud
+    - ibm
+    - partnership
