[`bitsandbytes`] Add 4bit bnb blogpost (#1138)
* add 4bit bnb

* correct tags

* standardize code blocks

* add another resource

* add more content

* nit

* add table

* remove a line

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update bitsandbytes-4bit-integration.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* add link to lora

* another comment

* Update bitsandbytes-4bit-integration.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* add link

* Update bitsandbytes-4bit-integration.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* add link

* add aknwoledgements

* fix name

* typo

* Update 4bit-transformers-bitsandbytes.md

Co-authored-by: Sylvain Gugger <35901082+sgugger@users.noreply.github.com>

* adapt from suggestions

* precise cuda

* update

* clarifications

---------

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Sylvain Gugger <35901082+sgugger@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2188,3 +2188,14 @@
     - cloud
     - azure
     - partnership
+
+- local: 4bit-transformers-bitsandbytes
+  title: "Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA"
+  author: ybelkada
+  thumbnail: /blog/assets/96_hf_bitsandbytes_integration/Thumbnail_blue.png
+  date: May 24, 2023
+  tags:
+    - transformers
+    - quantization
+    - bitsandbytes
+    - 4bit
