Adds a post that shows how to optimize Stable Diffusion for Intel CPUs even further (#1129)
* add text content for intel sd blog

Co-authored-by: AlexKoff88 <alexander.kozlov@intel.com>

* add rest of the stuff.

* modify results table.

* change extension.

* remove non-HF users for now.

* fix: formatting

* add: other authors.

* Apply suggestions from code review

Co-authored-by: Helena Kloosterman <helena.kloosterman@intel.com>

* address further PR comments.

* change aws instance name.

* change blog post date.

---------

Co-authored-by: AlexKoff88 <alexander.kozlov@intel.com>
Co-authored-by: Helena Kloosterman <helena.kloosterman@intel.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2178,7 +2178,7 @@
     - cloud
     - ibm
     - partnership
-    
+
 - local: hugging-face-endpoints-on-azure
   title: "Hugging Face Collaborates with Microsoft to Launch Hugging Face Model Catalog on Azure"
   author: philschmid
@@ -2199,3 +2199,14 @@
     - quantization
     - bitsandbytes
     - 4bit
+
+- local: train-optimize-sd-intel
+  title: "Optimizing Stable Diffusion for Intel CPUs with NNCF and 🤗 Optimum"
+  author: AlexKoff88
+  thumbnail: /blog/assets/train_optimize_sd_intel/thumbnail.png
+  date: May 25, 2023
+  tags:
+    - diffusers
+    - cpu
+    - intel
+    - guide
