add post to yaml

--- a/_blog.yml
+++ b/_blog.yml
@@ -2211,3 +2211,13 @@
     - intel
     - guide
     - quantization
+
+- local: bertopic
+  title: "Introducing BERTopic Integration with Hugging Face Hub"
+  author: davanstrien
+  thumbnail: /blog/assets/145_bertopic/logo.png
+  date: May 31, 2023
+  tags:
+    - guide
+    - open-source-collab
+    - community
