--- a/_blog.yml
+++ b/_blog.yml
@@ -2233,7 +2233,7 @@
     - partnership
     - guide
 
-- local: cnil-accompanument
+- local: cnil-accompaniment
   title: "Hugging Face Selected for the French Data Protection Agency Enhanced Support Program"
   author: yjernite
   thumbnail: /blog/assets/146_cnil-accompaniment/logo.png
