Apply suggestions from code review
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: dylanebert <dylan.ebert@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2213,7 +2213,7 @@
     - quantization
 
 - local: game-jam
-  title: "Announcing our first AI Game Jam 🎮"
+  title: "Announcing the Open Source AI Game Jam 🎮"
   author: ThomasSimonini
   thumbnail: /blog/assets/145_gamejam/thumbnail.png
   date: May 31, 2023
