Add Game Jam Article (#1157)
* Add Game Jam

* Update _blog.yml

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: dylanebert <dylan.ebert@gmail.com>

* Update game-jam.md

---------

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: dylanebert <dylan.ebert@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2232,3 +2232,12 @@
     - aws
     - partnership
     - guide
+
+- local: game-jam
+  title: "Announcing the Open Source AI Game Jam 🎮"
+  author: ThomasSimonini
+  thumbnail: /blog/assets/145_gamejam/thumbnail.png
+  date: June 1, 2023
+  tags:
+    - community
+    - game-dev
