Migrating the CNIL "accompagnement renforce" announcement from the HF blog (#1161)
* Create .gitignore

* Add files via upload

* Delete .gitignore

* Create cnil-accompaniment.md

* Update cnil-accompaniment.md

* Update _blog.yml

* typo in link

* Update _blog.yml

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update and rename cnil-accompaniment.md to cnil.md

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2221,7 +2221,7 @@
     - guide
     - open-source-collab
     - community
-    
+
 - local: sagemaker-huggingface-llm
   title: "Introducing the Hugging Face LLM Inference Container for Amazon SageMaker"
   author: philschmid
@@ -2232,6 +2232,14 @@
     - aws
     - partnership
     - guide
+
+- local: cnil
+  title: "Hugging Face Selected for the French Data Protection Agency Enhanced Support Program"
+  author: yjernite
+  thumbnail: /blog/assets/146_cnil-accompaniment/logo.png
+  date: May 15, 2023
+  tags:
+    - ethics
 
 - local: game-jam
   title: "Announcing the Open Source AI Game Jam 🎮"
