--- a/_blog.yml
+++ b/_blog.yml
@@ -2258,3 +2258,13 @@
     - community
     - guide
     - game-dev
+
+- local: fasttext
+  title: "Welcome fastText to the 🤗 Hub"
+  author: sheonhan
+  thumbnail: /blog/assets/147_fasttext/thumbnail.png
+  date: June 25, 2023
+  tags:
+    - open-source-collab
+    - nlp
+    - partnership
