--- a/_blog.yml
+++ b/_blog.yml
@@ -2258,3 +2258,14 @@
     - community
     - guide
     - game-dev
+
+
+- local: falcon
+  title: "The Falcon has landed in the Hugging Face ecosystem"
+  author: slippylolo
+  thumbnail: /blog/assets/147_falcon/falcon_thumbnail.png
+  date: June 5, 2023
+  tags:
+    - nlp
+    - community
+    - research
