update thumbnail + authors

--- a/_blog.yml
+++ b/_blog.yml
@@ -2262,8 +2262,8 @@
 
 - local: falcon
   title: "The Falcon has landed in the Hugging Face ecosystem"
-  author: slippylolo
-  thumbnail: /blog/assets/147_falcon/falcon_thumbnail.png
+  author: lvwerra
+  thumbnail: /blog/assets/147_falcon/falcon_thumbnail.jpg
   date: June 5, 2023
   tags:
     - nlp
