Falcon blog post (#1174)
* add content

* Apply suggestions from code review

* Update content and links

* add mqa figure

* fix 7b license

* add authors

* conclusion

* Add text-generation-inference paragraph

* update SFTTrainer example

* Core ML video (and poster image)

* Update falcon.md

Co-authored-by: Philipp Schmid <32632186+philschmid@users.noreply.github.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Replace video with html tag.

(Tested in codespaces)

* Update falcon.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* update thumbnail/authorlist

* Update embedded demo URL

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Update falcon.md

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* update thumbnail + authors

* Remove spurious `)`

* update thumbnail

---------

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>
Co-authored-by: Julien Launay <julien@lighton.ai>
Co-authored-by: OlivierDehaene <23298448+OlivierDehaene@users.noreply.github.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Philipp Schmid <32632186+philschmid@users.noreply.github.com>
Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2258,3 +2258,14 @@
     - community
     - guide
     - game-dev
+
+
+- local: falcon
+  title: "The Falcon has landed in the Hugging Face ecosystem"
+  author: lvwerra
+  thumbnail: /blog/assets/147_falcon/falcon_thumbnail.jpg
+  date: June 5, 2023
+  tags:
+    - nlp
+    - community
+    - research
