--- a/_blog.yml
+++ b/_blog.yml
@@ -2269,3 +2269,11 @@
     - nlp
     - community
     - research
+
+- local: hub-duckdb
+  title: "DuckDB: analyze 50,000+ datasets stored on the Hugging Face Hub"
+  author: stevhliu
+  thumbnail: /blog/assets/hub_duckdb/hub_duckdb.jpg
+  date: June 5, 2023
+  tags:
+    - guide
