Add blog post about fastText models (#1173)
* Add fasttext blog post

* Fix grammar

* Add to _blog.yml

* test widget

* Add fasttext language identification widget

* use tinypng

* add authors

* replace widget with screenshots

* Add Juan as a guest

* Update fasttext.md

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2259,7 +2259,6 @@
     - guide
     - game-dev
 
-
 - local: falcon
   title: "The Falcon has landed in the Hugging Face ecosystem"
   author: lvwerra
@@ -2269,3 +2268,14 @@
     - nlp
     - community
     - research
+
+- local: fasttext
+  title: "Welcome fastText to the 🤗 Hub"
+  author: sheonhan
+  thumbnail: /blog/assets/147_fasttext/thumbnail.png
+  date: June 5, 2023
+  tags:
+    - open-source-collab
+    - nlp
+    - partnerships
+
