--- a/_blog.yml
+++ b/_blog.yml
@@ -2273,7 +2273,7 @@
 - local: hub-duckdb
   title: "DuckDB: analyze 50,000+ datasets stored on the Hugging Face Hub"
   author: stevhliu
-  thumbnail: /blog/assets/hub_duckdb/hub_duckdb.jpg
+  thumbnail: /blog/assets/hub_duckdb/hub_duckdb.png
   date: June 5, 2023
   tags:
     - guide
