Blog post about querying Hub with DuckDB (#1177)
* Create hub-duckdb.md

* Update _blog.yml

* Create hub_duckdb

* Delete hub_duckdb

* Create folder

* Add files via upload

* Delete .gitkeep

* Add files via upload

* use new thumbnail

* use new thumbnail

* Delete hub_duckdb.jpg

* feedback

* Update hub-duckdb.md

---------

Co-authored-by: Quentin Lhoest <42851186+lhoestq@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2279,3 +2279,10 @@
     - nlp
     - partnerships
 
+- local: hub-duckdb
+  title: "DuckDB: analyze 50,000+ datasets stored on the Hugging Face Hub"
+  author: stevhliu
+  thumbnail: /blog/assets/hub_duckdb/hub_duckdb.png
+  date: June 6, 2023
+  tags:
+    - guide
