--- a/_blog.yml
+++ b/_blog.yml
@@ -2286,3 +2286,13 @@
   date: June 7, 2023
   tags:
     - guide
+
+- local: llm-leaderboard
+  title: "Can foundation models label data like humans?"
+  author: nazneen
+  thumbnail: /blog/assets/llm-leaderboard/leaderboard-thumbnail.png
+  date: June 8, 2023
+  tags:
+    - nlp
+    - evaluation
+    - leaderboard
