--- a/_blog.yml
+++ b/_blog.yml
@@ -2286,3 +2286,12 @@
   date: June 7, 2023
   tags:
     - guide
+
+- local: hf-hub-glam-guide
+  title: "The Hugging Face Hub for Galleries, Libraries, Archives and Museums"
+  author: davanstrien
+  thumbnail: /blog/assets/144_hf_hub_glam_guide/thumbnail.png
+  date: June 12, 2023
+  tags:
+    - community
+    - guide
