initial draft of evals blogpost (#1197)
* initial draft of evals blogpost

* add guests

* update from Notion

* make formatting easier

* add figures

* nit

* add interface image and human ratings results

---------

Co-authored-by: Nathan Lambert <nathan@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2295,3 +2295,13 @@
   tags:
     - community
     - guide
+
+- local: llm-leaderboard
+  title: "Can foundation models label data like humans?"
+  author: nazneen
+  thumbnail: /blog/assets/llm-leaderboard/leaderboard-thumbnail.png
+  date: June 12, 2023
+  tags:
+    - nlp
+    - evaluation
+    - leaderboard
