--- a/_blog.yml
+++ b/_blog.yml
@@ -2309,7 +2309,7 @@
 - local: huggingface-and-amd
   title: "Hugging Face and AMD partner on accelerating state-of-the-art models for CPU and GPU platforms"
   author: juliensimon
-  thumbnail: /blog/assets/xxx_amd/xx.png
+  thumbnail: /blog/assets/148_huggingface_amd/01.png
   date: June 13, 2023
   tags:
     - hardware
