--- a/_blog.yml
+++ b/_blog.yml
@@ -2106,10 +2106,9 @@
   title: "Announcing our new Content Guidelines and Policy"
   author: giadap
   thumbnail: /blog/assets/content-guidelines-blogpost/thumbnail.png
-  date: May 15, 2023
+  date: June 15, 2023
   tags:
-    - content-policy
-    - guidelines
+    - community
     - ethics
     
 - local: rwkv
