autoformer time series blog post (#1184)
* autoformer blog post

* added authors and title

* added yaml entry

* link to the images

* empty thumbnail

* fixed inline latex

* fixed formatting of outputs

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* Update autoformer.md

Co-authored-by: NielsRogge <48327001+NielsRogge@users.noreply.github.com>

* author list

* removed telemetry from markdown

* rework the dlinear part

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update autoformer.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2347,3 +2347,13 @@
     - stable-diffusion
     - diffusion
     - quantization
+
+- local: autoformer
+  title: "Yes, Transformers are Effective for Time Series Forecasting (+ Autoformer)"
+  author: elisim
+  thumbnail: /blog/assets/150_autoformer/thumbnail.png
+  date: June 16, 2023
+  tags:
+    - guide
+    - research
+    - time-series
