Upload MMS fine-tuning (#1243)
* Upload mms

* Upload mms

* Upload mms

* Apply suggestions from code review

Co-authored-by: Sanchit Gandhi <93869735+sanchit-gandhi@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* more fixes

* more fixes

* more fixes

---------

Co-authored-by: Sanchit Gandhi <93869735+sanchit-gandhi@users.noreply.github.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2357,3 +2357,12 @@
     - guide
     - research
     - time-series
+
+# - local: mms_adapters
+#   title: "Fine-tuning MMS Adapter Models for Multi-Lingual ASR"
+#   author: patrickvonplaten
+#   thumbnail: /blog/assets/151_mms/mms_map.png
+#   date: June 19, 2023
+#   tags:
+#     - audio
+#     - research
